<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <modules>
        <module>melosys-eessi-app</module>
        <module>melosys-eessi-test</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.4.1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>no.nav</groupId>
    <artifactId>melosys-eessi</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>melosys-eessi</name>
    <description>Melosys EESSI integrasjon</description>

    <properties>
        <bekk-nocommons.version>0.12.0</bekk-nocommons.version>
        <commons-io.version>2.11.0</commons-io.version>
        <guava.version>29.0-jre</guava.version>
        <hibernate-types.version>2.10.1</hibernate-types.version>
        <java.version>16</java.version>
        <logback-classic.version>1.2.3</logback-classic.version>
        <logstash-encoder.version>5.3</logstash-encoder.version>
        <lombok.version>1.18.20</lombok.version>
        <jackson.version>2.12.3</jackson.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <micrometer-jvm-extras.version>0.2.1</micrometer-jvm-extras.version>
        <nimbus-jose-jwt.version>8.20.1</nimbus-jose-jwt.version>
        <okhttp3.version>4.9.1</okhttp3.version>
        <person-utils.version>1.35.0</person-utils.version>
        <random-benas.version>3.9.0</random-benas.version>
        <shedlock-version>4.19.1</shedlock-version>
        <springfox-swagger2.version>2.9.2</springfox-swagger2.version>
        <testcontainers.version>1.15.2</testcontainers.version>
        <token-support.version>1.3.7</token-support.version>
        <unleash.version>4.4.0</unleash.version>
        <vault-jdbc.version>1.3.7</vault-jdbc.version>

        <!-- Transitive avhengigheter -->
        <asm.version>7.3.1</asm.version>
        <checker-qual.version>3.20.0</checker-qual.version>
        <javassist.version>3.27.0-GA</javassist.version>
        <jna.version>5.5.0</jna.version>
        <objenesis.version>3.2</objenesis.version>
        <scala.version>2.13.2</scala.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <!-- Transitive avhengigheter -->
            <dependency>
                <groupId>org.checkerframework</groupId>
                <artifactId>checker-qual</artifactId>
                <version>${checker-qual.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm</artifactId>
                <version>${asm.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.javassist</groupId>
                <artifactId>javassist</artifactId>
                <version>${javassist.version}</version>
            </dependency>
            <dependency>
                <groupId>net.java.dev.jna</groupId>
                <artifactId>jna</artifactId>
                <version>${jna.version}</version>
            </dependency>
            <dependency>
                <groupId>org.objenesis</groupId>
                <artifactId>objenesis</artifactId>
                <version>${objenesis.version}</version>
            </dependency>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-library</artifactId>
                <version>${scala.version}</version>
            </dependency>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-reflect</artifactId>
                <version>${scala.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-failsafe-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer-plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <rules>
                        <requireMavenVersion>
                            <version>3.6.0</version>
                        </requireMavenVersion>
                        <requireJavaVersion>
                            <version>${java.version}</version>
                        </requireJavaVersion>
                        <dependencyConvergence/>
                    </rules>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
